<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/buttonPunctuation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/punctuation"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlay"
        app:layout_constraintStart_toStartOf="@+id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/buttonCredits"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/credits"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonPunctuation"
        app:layout_constraintStart_toStartOf="@+id/buttonPunctuation"
        app:layout_constraintTop_toBottomOf="@+id/buttonPunctuation"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/TextAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextAppName"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>